[package]
name = "figgie-auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
kanal = "0.1.0-pre8"


[profile.release]
debug = true